crates/toml_edit/tests/snapshots/invalid/spec-1.1.0/common-49-0.stderr
TOML parse error at line 3, column 1
  |
3 | type.edible = false  # INVALID
  | ^^^^
cannot extend value of type inline table with a dotted key
